kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: metadata-service$(postfix)
  namespace: backend
  labels:
    app: metadata
    tier: backend
spec:
  selector:
    app: metadata
    tier: backend
  ports:
    - port: 8090
